--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.23.3",
+    "@emotion/core": "^10.0.28",
+    "gatsby": "^2.23.7",
+    "gatsby-plugin-emotion": "^4.3.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
