--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/core": "^10.0.28",
     "gatsby": "^2.23.7",
     "gatsby-plugin-emotion": "^4.3.4",
+    "gatsby-source-filesystem": "^2.3.12",
+    "gatsby-transformer-remark": "^2.8.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
