--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-remark": "^2.8.17",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.10.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
