--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/core": "^10.0.28",
     "gatsby": "^2.23.7",
     "gatsby-plugin-emotion": "^4.3.4",
+    "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-remark": "^2.8.17",
     "react": "^16.12.0",
