--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "gatsby": "^2.23.7",
+    "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-emotion": "^4.3.4",
     "gatsby-plugin-manifest": "^2.4.14",
