--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-emotion": "^4.3.4",
+    "gatsby-plugin-lodash": "^3.3.9",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-remark": "^2.8.17",
     "gatsby-transformer-sharp": "^2.5.7",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.10.0"
