--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-lodash": "^3.3.9",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-remark-images": "^3.3.18",
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-remark": "^2.8.17",
     "gatsby-transformer-sharp": "^2.5.7",
