--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^4.0.0",
     "gatsby": "^2.23.7",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.4.9",
