--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "test": "echo \"None yet!\" && exit 1"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "emotion-theming": "^10.0.27",
+    "@emotion/react": "^11.1.5",
     "gatsby": "^2.23.7",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.4.9",
