--- a/package.json
+++ b/package.json
@@ -2,47 +2,50 @@
   "name": "mdwyer.io",
   "private": true,
   "description": "My own personal site",
-  "version": "0.2.0",
-  "license": "MIT",
+  "version": "1.0.0",
+  "author": "mdwyer",
+  "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "gatsby": "^3.2.1",
+    "gatsby-plugin-emotion": "^6.2.0",
+    "gatsby-plugin-gatsby-cloud": "^2.2.0",
+    "gatsby-plugin-image": "^1.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "deploy": "gatsby build && gh-pages -d public -b master",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"None yet!\" && exit 1"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.1.5",
-    "gatsby": "^2.23.7",
-    "gatsby-awesome-pagination": "^0.3.6",
-    "gatsby-image": "^2.4.9",
-    "gatsby-plugin-emotion": "^4.3.4",
-    "gatsby-plugin-lodash": "^3.3.9",
-    "gatsby-plugin-manifest": "^2.4.14",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.14",
-    "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.3.18",
-    "gatsby-source-filesystem": "^2.3.12",
-    "gatsby-transformer-remark": "^2.8.17",
-    "gatsby-transformer-sharp": "^2.5.7",
-    "lodash": "^4.17.15",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.10.0"
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "prettier": "2.0.5"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/m-dwyer/m-dwyer.github.io"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/m-dwyer/m-dwyer.github.io/issues"
   }
 }
